[gd_scene load_steps=6 format=3 uid="uid://dfdlj4k1uqvm2"]

[ext_resource type="Script" uid="uid://0lvqxgurg3oj" path="res://Scripts/UI/Map/MapButton.gd" id="1_v70sr"]
[ext_resource type="Script" uid="uid://dubtvleqifgvs" path="res://Scripts/UI/ForcastButtonText.gd" id="2_v70sr"]

[sub_resource type="Animation" id="Animation_r10et"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextHolder/PanelContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextHolder/PanelContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TextHolder:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_p5u53"]
resource_name = "display_town_values"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextHolder/PanelContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextHolder/PanelContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-100, 0), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TextHolder:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r10et"]
_data = {
&"RESET": SubResource("Animation_r10et"),
&"display_town_values": SubResource("Animation_p5u53")
}

[node name="Town" type="HBoxContainer"]
offset_right = 63.0
offset_bottom = 29.0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_v70sr")
position_fraction = Vector2(0.4, 0.2)

[node name="ShowButton" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
text = " TOWN "

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_r10et")
}

[node name="TextHolder" type="Control" parent="."]
visible = false
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="TextHolder"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
offset_left = -100.0
offset_right = 39.0
offset_bottom = 170.0

[node name="VBoxContainer" type="VBoxContainer" parent="TextHolder/PanelContainer"]
layout_mode = 2

[node name="DaySelectionButtons" type="HBoxContainer" parent="TextHolder/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="Button" type="Button" parent="TextHolder/PanelContainer/VBoxContainer/DaySelectionButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Today"

[node name="Button2" type="Button" parent="TextHolder/PanelContainer/VBoxContainer/DaySelectionButtons"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_v70sr")
forcast_length = 1

[node name="Button3" type="Button" parent="TextHolder/PanelContainer/VBoxContainer/DaySelectionButtons"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_v70sr")
forcast_length = 2

[node name="Margin" type="MarginContainer" parent="TextHolder/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="Text" type="RichTextLabel" parent="TextHolder/PanelContainer/VBoxContainer/Margin"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Weather:
Tempurature:
Population:
Opening hours:"
fit_content = true
autowrap_mode = 0
shortcut_keys_enabled = false

[node name="GoButton" type="Button" parent="TextHolder/PanelContainer/VBoxContainer"]
layout_mode = 2
text = " Go "

[connection signal="pressed" from="ShowButton" to="." method="on_show_pressed"]
[connection signal="pressed" from="TextHolder/PanelContainer/VBoxContainer/DaySelectionButtons/Button" to="." method="show_town_values" binds= [0]]
[connection signal="pressed" from="TextHolder/PanelContainer/VBoxContainer/DaySelectionButtons/Button2" to="." method="show_town_values" binds= [1]]
[connection signal="pressed" from="TextHolder/PanelContainer/VBoxContainer/DaySelectionButtons/Button3" to="." method="show_town_values" binds= [2]]
